--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -1471,6 +1471,32 @@
     "    phi, phi_w,h0, hw, bnw,bw = osm.orientation_analysis(G)\n",
     "    print(f\"{place},\\n\\tphi: {phi}\\n\\tphi_w: {phi_w}\\n\\th0: {h0}\\n\\th_w: {hw}\\n\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Moving Points Voronoi Diagram\n",
+    "Can be viewd here: https://kestrel.page/static/projects/voronoi/www/index.html  \n",
+    "Source Code: https://github.com/raphi-web/voronoi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus because in the process of making the Voronoi Diagramm I made also a Delauney Version\n",
+    "Can be viewed here https://kestrel.page/static/projects/delauney/www/index.html  \n",
+    "Source Code: https://github.com/raphi-web/delauney-wasm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Source Code of Implementations:\n",
+    "https://github.com/raphi-web/Advanced-Topics"
+   ]
   }
  ],
  "metadata": {
